# jass-runner

./: .gitignore  CLAUDE.md  PROJECT_NOTES.md  README.md  README_zh.md  TODO.md  debug_output.txt  debug_test.py  find_large_files.py  pyproject.toml  requirements.txt  setup.py  test_createforce.py  test_createforce_exec.py
.claude/: settings.local.json
.claude/commands/: commit-and-push.md  update-notes.md
docs/: phase1_summary.md  phase2_summary.md  phase4_state_management_summary.md  phase5_state_management_summary.md  technical_debt.md  user-guide.md  user_guide.md
docs/api/: README.md  handle.md  manager.md  state.md
docs/natives/: README.md
docs/plans/: 2026-02-24-jass-simulator-design.md  2026-02-24-jass-simulator-phase1-setup.md  2026-02-24-jass-simulator-phase2-interpreter.md  2026-02-24-jass-simulator-phase3-natives.md  2026-02-24-jass-simulator-phase4-timer.md  2026-02-24-jass-simulator-phase5-vm.md  (+79 more)
examples/: boolexpr_demo.py  complete_example.j  hello_world.j  performance_benchmark.py  player_chat_example.py  run_complete_example.py  run_timer_example.py  run_trigger_examples.py  run_war3map.py  state_management_demo.py  state_management_test.j  timer_example.j  trigger_basic.j  trigger_timer.j  trigger_unit_death.j
instructions/: test.md
notes/: notes_for_human.md
resources/: BlizzardAPI.j  KKAPI.j  common.j  war3map.j
tests/: __init__.py  conftest.py  test_array_assignment.py  test_kkapi_natives.py  test_player_controller_natives.py  test_player_slot_state_natives.py  test_project_structure.py  test_unit_slots_natives.py  test_utils.py
(+270 files in other folders)
